# rust-sandbox

./: .gitignore
pocs/kata-data/: .gitignore  Cargo.toml  README.md  docker-compose.yml
pocs/kata-data/config/: prometheus-local.yml  prometheus.yml
pocs/kata-data/data/: regional_sales.csv
pocs/kata-data/docker/: Dockerfile.api  Dockerfile.pipeline  Dockerfile.soap
pocs/kata-data/mock-soap/: Cargo.toml
pocs/kata-data/mock-soap/src/: main.rs
pocs/kata-data/scripts/: run-local.sh
pocs/kata-data/src/: lib.rs  main.rs
pocs/kata-data/src/api/: main.rs
pocs/kata-data/src/ingestion/: csv_source.rs  mod.rs  soap_source.rs  sqlite_source.rs
pocs/kata-data/src/lineage/: mod.rs
pocs/kata-data/src/observability/: mod.rs
pocs/kata-data/src/processing/: mod.rs  sink.rs
pocs/pdf-summary-task/: Cargo.toml  Dockerfile  README.md  task.definition.json
pocs/pdf-summary-task/src/: handler.rs  main.rs  s3.rs
