[package]
name = "pdf-summary-task"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "1"
aws-sdk-s3 = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
pdf-extract = "0.7"
reqwest = { version = "0.11", features = ["json"] }
